--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="neutral">#FFFFFF</color>
     <color name="splash_background">#1C1E21</color>
     <color name="display_small">#FFFFFFFF</color>
     <color name="text_medium">#FFB0B3B8</color>
