--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="neutral">#000000</color>
     <color name="splash_background">#FFFFFF</color>
     <color name="display_small">#000000</color>
     <color name="text_medium">#FF4E4B66</color>
